[package]
name = "xunit_repo"
version = "0.1.0"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
