[package]
name = "xunit_repo_db"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["r2d2", "postgres"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
url = "2.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
thiserror = "1"

[dev-dependencies]
tempdir = "0.3"
envy = "0.4"
